fixed upper-right button being blocked by vertical scrollbar (#130)
* fixed upper-right button being blocked by vertical scroll bar

moved the upper-right button in editor a little to the left, so that
once
vertical scroll bar appears, it will not block this button

* minor fix

--- a/client/styles/components/_editor.scss
+++ b/client/styles/components/_editor.scss
@@ -80,7 +80,7 @@
   }
   position: absolute;
   top: #{5 / $base-font-size}rem;
-  right: #{5 / $base-font-size}rem;
+  right: #{20 / $base-font-size}rem; // move left to avoid vertical scroll bar
   z-index: 1;
 }
 
